[package]
name = "dag_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.0"
itertools = "0.10.2"
serde = {version = "1.0", features=["derive"]}

config = "0.13"

log = "0.4"
env_logger = "0.8.4"

tui = {version="0.18", features=["crossterm"], default-features=false}
crossterm = "0.21"

tokio = { version = "1", features = ["full"] }
eyre = "0.6"

